--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Analog/Digital Multiplexers
+name=Analog-Digital Multiplexers
 version=1.0.0
 author=(see AUTHORS file)
 maintainer=Stefano Chizzolini <stechio.dev@gmail.com>
