--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Analog-Digital Multiplexers
-version=2.0.1
+version=3.0-DEV
 author=(see AUTHORS file)
 maintainer=Stefano Chizzolini <stechio.dev@gmail.com>
 sentence=Arduino library for controlling analog/digital multiplexers (A/D mux).
-paragraph=This library offers a common, convenient interface to control the read/write channel on analog/digital multiplexers like CMOS 4000 series (e.g. 4051 (74HC4051), 4067 (74HC4067)).
+paragraph=This library offers a common, convenient interface to control the read/write channel on analog/digital multiplexers of arbitrary size, like CMOS 4000 series (e.g. 8-channel 4051 (CD4051, 74HC4051), 16-channel 4067 (CD4067, 74HC4067)), 32-channel MegaMUX (ADG732), and so on.
 category=Signal Input/Output
 url=https://github.com/stechio/arduino-ad-mux-lib
 architectures=*
