--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=3.0-DEV
 author=(see AUTHORS file)
 maintainer=Stefano Chizzolini <stechio.dev@gmail.com>
 sentence=Arduino library for controlling analog/digital multiplexers (A/D mux).
-paragraph=This library offers a common, convenient interface to control the read/write channel on analog/digital multiplexers of arbitrary size, like CMOS 4000 series (e.g. 8-channel 4051 (CD4051, 74HC4051), 16-channel 4067 (CD4067, 74HC4067)), 32-channel MegaMUX (ADG732), and so on.
+paragraph=This library offers a common, convenient interface to control analog/digital multiplexers of any size, like CMOS 4000 series (e.g. 8-channel 4051 (CD4051, 74HC4051), 16-channel 4067 (CD4067, 74HC4067)), 32-channel MegaMUX (ADG732), and so on.
 category=Signal Input/Output
 url=https://github.com/stechio/arduino-ad-mux-lib
 architectures=*
