--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,17 @@ install:
   - pip install -U platformio
   - platformio update
 
+# https://docs.platformio.org/en/latest/boards/index.html
+env:
+  - BOARD=uno
+  - BOARD=megaatmega2560
+  - BOARD=nodemcuv2
+  - BOARD=esp-wrover-kit
+  - BOARD=teensy40
+
 # https://docs.platformio.org/en/latest/core/userguide/cmd_ci.html
 script:
   - set -eo pipefail;
     for example in examples/*; do
-      platformio ci --project-conf=platformio.ini --lib=. $example/*.ino;
+      platformio ci --board=$BOARD --lib=. $example/*.ino;
     done
