--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ env:
 # https://docs.platformio.org/en/latest/core/userguide/cmd_ci.html
 script:
   - set -eo pipefail;
-    for example in examples/*; do
+    for example in examples/*Example; do
       platformio ci --board=$BOARD --lib=. $example/*.ino.cpp;
     done
