--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=Analog-Digital Multiplexers
-version=3.0-DEV
+version=3.0.0
 author=(see AUTHORS file)
 maintainer=Stefano Chizzolini <stechio.dev@gmail.com>
 sentence=Arduino library for controlling analog/digital multiplexers (A/D mux).
